# qudo-pythia-rag-inference

./: Makefile  README.md  docker-compose.yml  pylintrc  pyproject.toml  requirements.txt
app/: flask_app.py
app/blueprints/admin/: api.py
app/blueprints/conversations/: api.py  serializer.py  service.py
app/blueprints/conversations/models/: conversation.py
app/blueprints/error_handler/: errors.py
app/blueprints/messages/: api.py  serializer.py  service.py
app/blueprints/messages/models/: message.py
app/blueprints/messages/v2/: api.py
app/blueprints/ping/: api.py
app/blueprints/trials/: api.py  serializer.py  service.py
app/blueprints/trials/models/: message.py  trial.py
app/factories/: application.py  celery.py  logging.py  mongo_db.py  redis_db.py  sentry.py
app/middlewares/auth/: authorization.py
app/middlewares/before_request/: set_user.py
app/settings/: config.py  logging.yaml
app/utils/: atlas_api_utils.py  base_models.py  feedback_model.py  list_utils.py  mapping_utils.py  permission_utils.py  redis_util.py  request_response_utils.py  s3_utils.py
app/utils/cache_utils/: auth_service_utils.py  message_cache_service.py  user_cache_service.py
app/utils/chatbot/: chatbot_utils.py  langchain_bot.py
app/utils/chatbot/data/: all-potential-contradiction-test.csv  all-relevant-questions-test.csv  (+7 more)
scripts/: buildspec.yml  create_all_vector_collections.py  deploy-celery.sh  deploy-flask.sh  dockerfile-celery  dockerfile-flask  multiple_questions_pythia.py  run_pythia.py
tests/: conftest.py
tests/blueprints/ping/: test_ping_api.py
(+9 files in other folders)
