[tool.black]
line-length = 121
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "pythia-backend"
version = "0.1.0"
description = ""
authors = ["Samantha Wise <samantha@qudo.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
boto3 = "1.26.148"
botocore = "1.29.148"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
cramjam = "2.6.2"
fastparquet = "2023.4.0"
frozenlist = "1.3.3"
fsspec = "2023.5.0"
idna = "3.4"
jmespath = "1.0.1"
multidict = "6.0.4"
numpy = "1.24.3"
openai = "0.28.1"
packaging = "23.1"
pandas = "1.5.3"
pyarrow = "12.0.0"
python-dateutil = "2.8.2"
pytz = "2023.3"
requests = "2.31.0"
s3fs = "0.4.2"
s3transfer = "0.6.1"
six = "1.16.0"
tqdm = "4.65.0"
tzdata = "2023.3"
urllib3 = "1.26.16"
yarl = "1.9.2"
langchain = "^0.0.310"
wheel = "^0.41.3"
tiktoken = "^0.5.1"
pymongo = "^4.6.0"
python-dotenv = "^1.0.0"
s3utils = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
